--- a/root-sync-empty.yaml
+++ b/root-sync-empty.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   sourceFormat: unstructured
   git:
-    repo: https://github.com/haiyanmeng/csmr-sample
+    repo: https://github.com/haiyanmeng/sync-latency
+    branch: main
     dir: empty
     auth: none
