--- a/root-sync.yaml
+++ b/root-sync.yaml
@@ -13,5 +13,5 @@ spec:
   git:
     repo: https://github.com/haiyanmeng/sync-latency
     branch: main
-    dir: configs-10000-cms
+    dir: configs-10000-cms-one-ns
     auth: none
